sdk/v0.6.2/together.mdx
---
title: "together"
icon: "square-m"
description: "<a href=\"https://github.com/pixeltable/pixeltable/blob/main/pixeltable/functions/together.py#L0\" id=\"viewSource\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"https://img.shields.io/badge/View%20Source%20on%20Github-blue?logo=github&labelColor=gray\" alt=\"View Source on GitHub\" style={{ display: 'inline', margin: '0px' }} noZoom /></a>"
noindex: true
---
# <span style={{ 'color': 'gray' }}>module</span>&nbsp; pixeltable.functions.together


Pixeltable UDFs
that wrap various endpoints from the Together AI API. In order to use them, you must
first `pip install together` and configure your Together AI credentials, as described in
the [Working with Together AI](https://docs.pixeltable.com/notebooks/integrations/working-with-together-ai) tutorial.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; chat_completions()

```python Signature
@pxt.udf
chat_completions(messages: pxt.Json[(Json, *, model: pxt.String, model_kwargs: pxt.Json | None = None) -> pxt.Json
```

Generate chat completions based on a given prompt using a specified model.

Equivalent to the Together AI `chat/completions` API endpoint.
For additional details, see: [https://docs.together.ai/reference/chat-completions-1](https://docs.together.ai/reference/chat-completions-1)

Request throttling:
Applies the rate limit set in the config (section `together.rate_limits`, key `chat`). If no rate
limit is configured, uses a default of 600 RPM.

__Requirements:__

- `pip install together`

**Parameters:**

- **`messages`** (`pxt.Json[(Json`): A list of messages comprising the conversation so far.
- **`model`** (`Any`): The name of the model to query.
- **`model_kwargs`** (`Any`): Additional keyword arguments for the Together `chat/completions` API.
    For details on the available parameters, see: [https://docs.together.ai/reference/chat-completions-1](https://docs.together.ai/reference/chat-completions-1)

**Returns:**

- `pxt.Json`: A dictionary containing the response and other metadata.

**Examples:**

Add a computed column that applies the model `openai/gpt-oss-20b` to an existing Pixeltable column
`tbl.prompt` of the table `tbl`:

```python
messages = [{'role': 'user', 'content': tbl.prompt}]
tbl.add_computed_column(
    response=chat_completions(messages, model='openai/gpt-oss-20b')
)
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; completions()

```python Signature
@pxt.udf
completions(
    prompt: pxt.String,
    *,
    model: pxt.String,
    model_kwargs: pxt.Json | None = None
) -> pxt.Json
```

Generate completions based on a given prompt using a specified model.

Equivalent to the Together AI `completions` API endpoint.
For additional details, see: [https://docs.together.ai/reference/completions-1](https://docs.together.ai/reference/completions-1)

Request throttling:
Applies the rate limit set in the config (section `together.rate_limits`, key `chat`). If no rate
limit is configured, uses a default of 600 RPM.

__Requirements:__

- `pip install together`

**Parameters:**

- **`prompt`** (`pxt.String`): A string providing context for the model to complete.
- **`model`** (`pxt.String`): The name of the model to query.
- **`model_kwargs`** (`pxt.Json | None`): Additional keyword arguments for the Together `completions` API.
    For details on the available parameters, see: [https://docs.together.ai/reference/completions-1](https://docs.together.ai/reference/completions-1)

**Returns:**

- `pxt.Json`: A dictionary containing the response and other metadata.

**Examples:**

Add a computed column that applies the model `Qwen/Qwen3.5-9B` to an existing Pixeltable column
`tbl.prompt` of the table `tbl`:

```python
tbl.add_computed_column(
    response=completions(tbl.prompt, model='Qwen/Qwen3.5-9B')
)
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; embeddings()

```python Signature
@pxt.udf
embeddings(
    input: pxt.String,
    *,
    model: pxt.String
) -> pxt.Array[(None,), float32]
```

Query an embedding model for a given string of text.

Equivalent to the Together AI `embeddings` API endpoint.
For additional details, see: [https://docs.together.ai/reference/embeddings-2](https://docs.together.ai/reference/embeddings-2)

Request throttling:
Applies the rate limit set in the config (section `together.rate_limits`, key `embeddings`). If no rate
limit is configured, uses a default of 600 RPM.

__Requirements:__

- `pip install together`

**Parameters:**

- **`input`** (`pxt.String`): A string providing the text for the model to embed.
- **`model`** (`pxt.String`): The name of the embedding model to use.

**Returns:**

- `pxt.Array[(None,), float32]`: An array representing the application of the given embedding to `input`.

**Examples:**

Add a computed column that applies the model `intfloat/multilingual-e5-large-instruct`
to an existing Pixeltable column `tbl.text` of the table `tbl`:

```python
tbl.add_computed_column(
    response=embeddings(
        tbl.text, model='intfloat/multilingual-e5-large-instruct'
    )
)
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; image_generations()

```python Signature
@pxt.udf
image_generations(
    prompt: pxt.String,
    *,
    model: pxt.String,
    model_kwargs: pxt.Json | None = None
) -> pxt.Image
```

Generate images based on a given prompt using a specified model.

Equivalent to the Together AI `images/generations` API endpoint.
For additional details, see: [https://docs.together.ai/reference/post_images-generations](https://docs.together.ai/reference/post_images-generations)

Request throttling:
Applies the rate limit set in the config (section `together.rate_limits`, key `images`). If no rate
limit is configured, uses a default of 600 RPM.

__Requirements:__

- `pip install together`

**Parameters:**

- **`prompt`** (`pxt.String`): A description of the desired images.
- **`model`** (`pxt.String`): The model to use for image generation.
- **`model_kwargs`** (`pxt.Json | None`): Additional keyword args for the Together `images/generations` API.
    For details on the available parameters, see: [https://docs.together.ai/reference/post_images-generations](https://docs.together.ai/reference/post_images-generations)

**Returns:**

- `pxt.Image`: The generated image.

**Examples:**

Add a computed column that applies the model `black-forest-labs/FLUX.1-schnell`
to an existing Pixeltable column `tbl.prompt` of the table `tbl`:

```python
tbl.add_computed_column(
    response=image_generations(
        tbl.prompt, model='black-forest-labs/FLUX.1-schnell'
    )
)
```

